# mcmclib

./: .gitignore  Doxyfile  Makefile  README.md  TODO  finmcmc.c  infmcmc.c  infmcmc.h
mcmclib/: CMakeLists.txt  LICENCE  finmcmc.h  infmcmc.c  infmcmc.h  prior_general.c  prior_general.h  t-setters.c
mcmclib/CMakeModules/: FindFFTW.cmake  FindGSL.cmake
mcmclib/examples/: general_prior_demo.c  setup_demo.c
mcmclib/tests/: t-setters.c
